--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -3,12 +3,8 @@
   background: url("/images/banner.SVG") no-repeat center;
 }
 
-@media (max-width: 576px) {
 
-  #homepage {
-    background: #DBDCDF;
-  }
-}
+
 
 #loginpage {
   background: url("/images/login_background.SVG") no-repeat center;
@@ -18,8 +14,116 @@
   background: url("/images/home_page_background.SVG") no-repeat left top;
 }
 
+@media (max-width: 576px) {
+
+  #homepage {
+    background: #DBDCDF;
+  }
+
+  #applypage {
+    background: url(/images/home_page_background.SVG) no-repeat right top;
+  }
+}
+
 .amountcolor {
   border: 0;
   color: #f6931f;
   font-weight: bold;
+}
+
+/*form styles*/
+#msform>#progressbar {
+  text-align: center;
+  position: relative;
+  margin-top: 30px;
+  padding-left: 0;
+}
+
+#msform fieldset {
+  /*stacking fieldsets above each other*/
+  position: relative;
+}
+
+/*Hide all except first fieldset*/
+#msform fieldset:not(:first-of-type) {
+  display: none;
+}
+
+/*inputs*/
+
+
+
+
+
+#msform .action-button:hover,
+#msform .action-button:focus {
+  box-shadow: 0 0 0 2px white, 0 0 0 3px #2098ce;
+}
+
+
+
+#msform .action-button-previous:hover,
+#msform .action-button-previous:focus {
+  box-shadow: 0 0 0 2px white, 0 0 0 3px #aCbEd0;
+}
+
+
+
+/*progressbar*/
+#progressbar {
+  margin-bottom: 30px;
+  overflow: hidden;
+  /*CSS counters to number the steps*/
+  counter-reset: step;
+}
+
+#progressbar li {
+  list-style-type: none;
+  color: #666;
+  text-transform: uppercase;
+  font-size: 9px;
+  width: 33.33%;
+  float: left;
+  position: relative;
+  letter-spacing: 1px;
+}
+
+#progressbar li:before {
+  content: counter(step);
+  counter-increment: step;
+  width: 24px;
+  height: 24px;
+  line-height: 26px;
+  display: block;
+  font-size: 12px;
+  color: #333;
+  background: white;
+  border-radius: 25px;
+  margin: 0 auto 10px auto;
+}
+
+/*progressbar connectors*/
+#progressbar li:after {
+  content: '';
+  width: 100%;
+  height: 2px;
+  background: white;
+  position: absolute;
+  left: -50%;
+  top: 9px;
+  z-index: -1;
+  /*put it behind the numbers*/
+}
+
+#progressbar li:first-child:after {
+  /*connector not needed before the first step*/
+  content: none;
+}
+
+/*marking active/completed steps blue*/
+/*The number of the step and the connector before it = blue*/
+#progressbar li.active:before,
+#progressbar li.active:after {
+  background: #2098ce;
+  color: white;
 }
