--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -14,6 +14,10 @@
   background: url("/images/home_page_background.SVG") no-repeat left top;
 }
 
+#dashboard{
+  background: url("/images/dashboard.SVG") no-repeat left center;;
+}
+
 @media (max-width: 576px) {
 
   #homepage {
@@ -126,4 +130,14 @@
 #progressbar li.active:after {
   background: #2098ce;
   color: white;
+}
+
+.dashcard{
+  background-color: rgba(255,255,255,.05) ;
+  overflow: hidden;
+  box-shadow: inset 0 0 1000px rgba(0,0,0,.5);
+  backdrop-filter: blur(15px);
+}
+.card:before{
+
 }
